--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@notionhq/client": "^0.4.4",
     "next": "12.0.1",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "react-loading-skeleton": "^3.0.2",
+    "sass": "^1.49.0"
   }
 }
