--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.x",
     "react-dom": "17.x",
     "react-loading-skeleton": "^3.0.2",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "uuid": "^8.3.2"
   }
 }
